fix scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -253,6 +253,7 @@ button {
 
 .gameSidebarNotes {
   border-left: 2px solid #BABABA;
+  overflow: hidden;
 }
 
 .gameStartMainContent {
